--- a/package.json
+++ b/package.json
@@ -39,12 +39,15 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/accidental-feature/spotify-dev-toolbox.git"
+    "url": "git+https://github.com/accidental-feature/spotify-dev-toolbox.git"
   },
   "bugs": "https://github.com/accidental-feature/spotify-dev-toolbox/issues",
   "author": {
     "name": "Kijana Richmond",
     "url": "https://kijana.dev/"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   },
   "keywords": [
     "spotify",
